Clean up error handling/logging; infer PutObject contentLength