@@ -108,8 +108,7 @@ class ErrorsTelemetryTest {
 
     final List<Map<String, Object>> telemetryErrors =
         (List<Map<String, Object>>) eventWithIssues.get("telemetryErrors");
-    Assertions.assertEquals(2, telemetryErrors.size());
-    Assertions.assertEquals("INFER_REQUIRED_FIELD_FAILURE", telemetryErrors.get(0).get("type"));
-    Assertions.assertEquals("ON_EXECUTION_FAILURE", telemetryErrors.get(1).get("type"));
+    Assertions.assertEquals(1, telemetryErrors.size());
+    Assertions.assertEquals("ON_EXECUTION_FAILURE", telemetryErrors.getFirst().get("type"));
   }
 }
